# ArcadeManager

./: .gitignore  pyproject.toml
src/: bot.py  constants.py  plugins.py
src/ext/: codebreaker.py  stars.py  suggestions.py  tixtax.py
